[package]
name = "kalavor"
version = "0.1.0"
edition = "2021"
authors = ["K--Aethiax"]

description = "K--Aethiax flavored contents, mainly for private use."

documentation = "https://docs.rs/kalavor"
repository = "https://github.com/eternal-io/kalavor"
license = "MIT OR Apache-2.0"
readme = false

keywords = ["flavored", "content"]
categories = ["value-formatting", "text-processing"]

[features]
default = []
time = ["dep:time"]
parser = ["dep:simdutf8"]

[dependencies]
time = { version = "0.3.37", optional = true, default-features = false, features = ["std"] }
simdutf8 = { version = "0.1.5", optional = true }
