[package]
name = "kalavor"
version = "0.2.0-internal.a"
edition = "2021"
authors = ["K--Aethiax"]

description = "K--Aethiax flavored contents, mainly for private use."

documentation = "https://docs.rs/kalavor"
repository = "https://github.com/eternal-io/kalavor"
license = "MIT OR Apache-2.0"
readme = false

keywords = ["flavored", "content"]
categories = ["value-formatting", "text-processing"]

[features]
default = ["std"]
std = []
time = ["dep:time"]

[dependencies]
time = { version = "0.3.37", optional = true }
